# hela-game

./: .gitignore  LICENSE  README.md
client/authentication/: Authentication.gd  GameProtocol.gd  Login.gd  Network.gd  Play.gd  README.md  Register.gd  project.godot
client/authentication/scenes/: Authentication.tscn  LoginScene.tscn  MainMenu.tscn  RegisterScene.tscn
docs/: protobuf-protocol-messages.txt
server/: CMakeLists.txt  README.md
server/proto/: game_protocol.proto
server/src/: CMakeLists.txt  Card.h  Database.cpp  Database.h  Player.h  Room.cpp  Room.h  Server.cpp  Server.h  Session.cpp  Session.h  User.cpp  User.h  Wrapper.cpp  Wrapper.h  main.cpp
